<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip">

    <!-- left side -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/trip_category_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/trip_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_category_input_string"
        android:layout_below="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trip_category"
        android:text="@string/vehicle_type_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/vehicle_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/vehicle_type_input_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_type"
        android:text="@string/distance_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:text="@string/distance_input_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:text="@string/date_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/carbon_calc_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:text="@string/date_input_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carbon_calc_date"
        android:text="@string/co2_emission_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/co2emission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:text="@string/co2_emission_input_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/co2emission"
        android:text="@string/note_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/carbon_calc_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:text="@string/note_input_string"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteRow"
        android:text="@string/delete_entry"
        android:layout_alignParentBottom="true" />


</RelativeLayout>