<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true">
        <TextView
            android:id="@+id/restaurantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"/>

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/percentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent" />

        <TextView
            android:id="@+id/tipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip" />

        <TextView
            android:id="@+id/totalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Restaurant"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Price"/>

        <TextView
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Percentage"/>

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Tip"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Total"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Date"/>

        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Notes"/>
    </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/deleteButton"
        android:onClick="deleteTip"
        android:id="@+id/deleteButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>