<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/restaurantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"/>

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/percentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent" />

        <TextView
            android:id="@+id/tipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip" />

        <TextView
            android:id="@+id/totalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/restaurant"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/percent"/>

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notes"/>
    </LinearLayout>

</LinearLayout>